--- a/explorer.html
+++ b/explorer.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Explorer 23- Paana</title>
+<title>Explorer 1- Paana</title>
 <meta content="Paana - Base de connaissances sur la santé publique en Polynésie française" name="description"/>
 <link href="header-footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet"/>
@@ -219,10 +219,13 @@
 <div class="signature">Emmanuelle RUPP-TERRIS</div>
 </div>
 <nav>
-<a href='/a-propos'>A PROPOS</a>
-<a href='/explorer'>EXPLORER</a>
-<a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
-<a href="mailto:frise.sante.pf@gmail.com"><i class="fas fa-envelope fa-lg"></i></a>
+  <a href="a-propos.html">A PROPOS</a>
+    <a href="explorer.html">EXPLORER</a>
+    <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" target="_blank">SOUMETTRE</a>
+    <a href="mailto:frise.sante.pf@gmail.com" title="Contacter par mail">
+      <i class="fas fa-envelope fa-lg"></i>
+    <a href="index.html" title="Retour à l'accueil">
+  <i class="fas fa-house"></i> 
 </nav>
 </header>
 <main>
