--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Paana</title>
+  <title>Paana2</title>
   <style>
     body {
       margin: 0;
@@ -80,9 +80,11 @@
       <a href="a-propos.html" class="btn">A PROPOS</a>
       <a href="explorer.html" class="btn">EXPLORER</a>
       <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" class="btn" target="_blank">SOUMETTRE</a>
-    </div>
+          </div>
     <footer class="footer">
-      <p>2025 _ Emmanuelle RUPP-TERRIS _ <a href="mailto:frise.sante.pf@gmail.com">Contact</a></p>
+      <p> © 2025 Emmanuelle RUPP-TERRIS.<br>
+        Tous droits réservés. Reproduction interdite sans autorisation.<br>
+        </p>
     </footer>
   </div>
 </body>
