--- a/index.html
+++ b/index.html
@@ -6,19 +6,22 @@
   <title>Paana2</title>
   <style>
     body {
-      margin: 0;
-      font-family: 'League Spartan', sans-serif;
-      background-color: #007b7f;
-      color: #f6f6e9;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      min-height: 80vh;
-      flex-direction: column;
+   height: 100%;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  background-color: #007b7f;
+  color: #f6f6e9;
+  font-family: 'League Spartan', sans-serif;
     }
     .container {
-      padding: 2rem;
+     flex: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 2rem;
     }
     .title {
       font-size: 3rem;
@@ -81,11 +84,12 @@
       <a href="explorer.html" class="btn">EXPLORER</a>
       <a href="https://forms.gle/PR8ZHvSXxLNYETtx9" class="btn" target="_blank">SOUMETTRE</a>
           </div>
-    <footer class="footer">
+  </div>
+  
+   <footer class="footer">
       <p> © 2025 Emmanuelle RUPP-TERRIS.<br>
         Tous droits réservés. Reproduction interdite sans autorisation.<br>
         </p>
     </footer>
-  </div>
 </body>
 </html>
