--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Paana2</title>
+  <title>Paana 3</title>
   <style>
     body {
    height: 100%;
@@ -36,7 +36,7 @@
     }
     .subtitle {
       font-size: 1.5rem;
-      margin-bottom: 2.5rem;
+      margin-bottom: 4rem;
       line-height: 1.2;
     }
     .buttons {
@@ -61,15 +61,16 @@
       background-color: #fee58c;
       color: #000;
     }
-    .footer {
-      font-size: 0.9rem;
-      color: #f6f6e9;
-      margin-top: 150px;
-    }
-    .footer a {
-      color: #f6f6e9;
-      text-decoration: underline;
-    }
+    .footer{
+  text-align: center;
+  padding: 20px;
+  width: 100%;
+}
+    .footer p {
+  margin: 0;
+  line-height: 1.6;
+}
+  
   </style>
 </head>
 <body>
