--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Paana 3</title>
+  <title>Paana</title>
   <style>
     body {
    height: 100%;
@@ -69,6 +69,9 @@
     .footer p {
   margin: 0;
   line-height: 1.6;
+}
+    html {
+  height: 100%;
 }
   
   </style>
