--- a/a-propos.html
+++ b/a-propos.html
@@ -57,6 +57,16 @@
       margin-bottom: 0;
       color: #050505;
     }
+
+        .footer{
+  text-align: center;
+  padding: 20px;
+  width: 100%;
+}
+    .footer p {
+  margin: 0;
+  line-height: 1.6;
+}
   </style>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -110,7 +120,7 @@
     <h2>Ce que vous pouvez faire sur la plateforme</h2>
     <ul>
       <li>Explorer les événements de santé publique par mot-clé, thème ou catégorie fonctionnelle 
-        <a href="Les FESP - définitions et exemples.pdf" target="_blank" title="En savoir plus ">ℹ️</a>
+        <a href="Les FESP - définitions et exemples.pdf" target="_blank" title="En savoir plus ">  <i class="fas fa-house"></i> </a>
       </li>
       <li>Accéder à des fiches détaillées et sourcées</li>
       <li>Activer un mode résumé pour visualiser rapidement l’essentiel</li>
@@ -118,6 +128,10 @@
       <li>Contribuer activement à l’enrichissement de la base via le formulaire dédié</li>
     </ul>
   </main>
-
+  <footer class="footer">
+      <p> © 2025 Emmanuelle RUPP-TERRIS.<br>
+        Tous droits réservés. Reproduction interdite sans autorisation.<br>
+        </p>
+    </footer>
 </body>
 </html>
