--- a/a-propos.html
+++ b/a-propos.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>A propos3 - Paana</title>
+  <title>A propos - Paana</title>
   <meta name="description" content="Paana - Base de connaissances sur la santé publique en Polynésie française">
   <link rel="stylesheet" href="header-footer.css" />
   <style>
@@ -119,10 +119,8 @@
       <li>Contribuer activement à l’enrichissement de la base via le formulaire dédié</li>
     </ul>
   </main>
-  <footer class="footer">
-      <p> © 2025 Emmanuelle RUPP-TERRIS.<br>
-        Tous droits réservés. Reproduction interdite sans autorisation.<br>
-        </p>
-    </footer>
+ <footer class="footer">
+    <p>© 2025 Emmanuelle RUPP-TERRIS.<br>Tous droits réservés. Reproduction interdite sans autorisation.</p>
+  </footer>
 </body>
 </html>
