--- a/explorer.html
+++ b/explorer.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Explorer 4- Paana</title>
+  <title>Explorer - Paana</title>
   <link rel="stylesheet" href="header-footer.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
@@ -117,7 +117,47 @@
       background: #ccc;
       border-radius: 5px;
     }
+.dropdown {
+  position: relative;
+  user-select: none;
+}
 
+.dropdown-toggle {
+  padding: 0.6rem;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
+.dropdown-menu {
+  position: absolute;
+  top: 110%;
+  left: 0;
+  right: 0;
+  background-color: white;
+  border: 1px solid #ccc;
+  border-radius: 6px;
+  max-height: 200px;
+  overflow-y: auto;
+  padding: 0.5rem;
+  display: none;
+  z-index: 1000;
+}
+
+.dropdown-menu label {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  padding: 0.2rem 0;
+  font-size: 0.95rem;
+  font-weight: normal; /* <- pas en gras */
+}
+
+.dropdown.open .dropdown-menu {
+  display: block;
+}
     </style>
 </head>
 <body>
@@ -156,10 +196,13 @@
       </select>
     </div>
 
-    <div class="filter-group checkbox-grid">
-      <span>Catégories</span>
-      <div class="checkbox-list" id="cat-group"></div>
-    </div>
+   <div class="filter-group">
+  <label for="cat-toggle" style="font-weight: normal;">Catégories</label>
+  <div class="dropdown" id="cat-dropdown">
+    <div id="cat-toggle" class="dropdown-toggle">Sélectionner des catégories ⌄</div>
+    <div class="dropdown-menu" id="cat-group"></div>
+  </div>
+</div>
 
     <div class="filter-group">
       <label for="keywords">Mot-clé</label>
@@ -224,7 +267,9 @@
         container.appendChild(label);
       });
     }
-
+document.getElementById("cat-toggle").addEventListener("click", function (e) {
+  document.getElementById("cat-dropdown").classList.toggle("open");
+});
     function render() {
       const y = document.getElementById("year").value;
       const t = document.getElementById("theme").value;
